[project]
name = "openconnect-sso"
version = "0.8.1"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = "GPL-3.0-only"
authors = [
    { name = "László Vaskó", email = "laszlo.vasko@outlook.com" },
    { name = "chpxu", email = "dev.chpxu@outlook.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = [
    "attrs>=18.2",
    "colorama>=0.4",
    "importlib-metadata==8.7.0",
    "lxml>=6.0",
    "keyring>=25.6",
    "prompt-toolkit>=3.0.3",
    "pyxdg>=0.26, <0.29",
    "requests>=2.22",
    "structlog>=20.1",
    "toml>=0.10",
    "setuptools>40.0",
    "PySocks>=1.7.1",
    "PyQt6>=6.3.0",
    "PyQt6-WebEngine>=6.3.0",
    "pyotp>=2.7.0",
]
[project.urls]
Homepage = "https://github.com/chpxu/openconnect-sso"
issues = "https://github.com/chpxu/openconnect-sso/issues"
[tool.hatch.build.target.sdist.force-include]
"openconnect_sso/cli.py" = "openconnect_sso/cli.py"

[tool.hatch.build.target.wheel.force-include]
"openconnect_sso/cli.py" = "openconnect_sso/cli.py"

[project.scripts]
openconnect-sso = "openconnect_sso.cli:main"

# [tool.poetry.dev-dependencies]
# coverage_enable_subprocess = "^1.0"
# pytest = "^7.2"
# black = "=22.10"
# pytest-asyncio = "^0.20.1"
# pytest-cov = "^4.0"
# pytest-httpserver = "^1.0"

[tool.black]
target-version = ['py310']

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
